test_dir/logs_backup/make/00.4/fopen_make_2016-12-01-17:04:07.txt
--------------------------------------------------------------------------------------------
seed: 22255
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27544
gcc -c shared.c
seed: 27544
seed: 27544
gcc -o blaster blaster.c shared.o
seed: 27544
seed: 27544
seed: 27544
seed: 27544collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 22478
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14671
gcc -c shared.c
seed: 14671
seed: 14671
gcc -o blaster blaster.c shared.o
seed: 14671
seed: 14671
seed: 14671
seed: 14671collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11682
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31853
gcc -c shared.c
seed: 31853
seed: 31853
gcc -o blaster blaster.c shared.o
seed: 31853
seed: 31853
seed: 31853
seed: 31853collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 30310
gcc -c shared.c
seed: 30310
seed: 30310
gcc -o blaster blaster.c shared.o
seed: 30310
seed: 30310
seed: 30310
seed: 30310
gcc -o blastee blastee.c shared.o
seed: 30310
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 30310
seed: 30310
seed: 30310
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24729
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 5242
gcc -c shared.c
seed: 5242
seed: 5242
gcc -o blaster blaster.c shared.o
seed: 5242
seed: 5242
seed: 5242
seed: 5242collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 32410
gcc -c shared.c
seed: 32410
seed: 32410
gcc -o blaster blaster.c shared.o
seed: 32410
seed: 32410
seed: 32410
seed: 32410collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21972
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 1063
gcc -c shared.c
seed: 1063
seed: 1063
gcc -o blaster blaster.c shared.o
seed: 1063
seed: 1063
seed: 1063
seed: 1063
gcc -o blastee blastee.c shared.o
seed: 1063
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 1063
seed: 1063
seed: 1063
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21607
gcc -c shared.c
seed: 21607
seed: 21607
gcc -o blaster blaster.c shared.o
seed: 21607
seed: 21607
seed: 21607
seed: 21607collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 15012
gcc -c shared.c
seed: 15012
seed: 15012
gcc -o blaster blaster.c shared.o
seed: 15012
seed: 15012
seed: 15012
seed: 15012
gcc -o blastee blastee.c shared.o
seed: 15012
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 15012
seed: 15012
seed: 15012
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 3106
gcc -c shared.c
seed: 3106
seed: 3106
gcc -o blaster blaster.c shared.o
seed: 3106
seed: 3106
seed: 3106
seed: 3106
gcc -o blastee blastee.c shared.o
seed: 3106
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 3106
seed: 3106
seed: 3106
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 4826
gcc -c shared.c
seed: 4826
seed: 4826
gcc -o blaster blaster.c shared.o
seed: 4826
seed: 4826
seed: 4826
seed: 4826
gcc -o blastee blastee.c shared.o
seed: 4826
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 4826
seed: 4826
seed: 4826
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14278
gcc -c shared.c
seed: 14278
seed: 14278
gcc -o blaster blaster.c shared.o
seed: 14278
seed: 14278
seed: 14278
seed: 14278collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 13601
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9194
gcc -c shared.c
seed: 9194
seed: 9194
gcc -o blaster blaster.c shared.o
seed: 9194
seed: 9194
seed: 9194
seed: 9194
gcc -o blastee blastee.c shared.o
seed: 9194
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 9194
seed: 9194
seed: 9194
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24406
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
